Implimented protocol rules and login procedures.

--- a/BAChatService/App.config
+++ b/BAChatService/App.config
@@ -1,7 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="BackEndAuthURL" value=""/>
-    <add key="ListeningPort" value="55475"/>
+    <add key="BackEndAuthURL" value="https://ba-dz1.ad.belowaverage.org/API/AUTH/?BAChat" />
+    <add key="ListeningPort" value="55475" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
