--- a/BAChatService/packages.config
+++ b/BAChatService/packages.config
@@ -3,6 +3,7 @@
   <package id="Costura.Fody" version="3.1.0" targetFramework="net471" />
   <package id="Fody" version="3.1.3" targetFramework="net471" developmentDependency="true" />
   <package id="log4net" version="2.0.3" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net471" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net471" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net471" />
