Added logging mechanism, and a channel class.

--- a/BAChatService/BAChatService.csproj
+++ b/BAChatService/BAChatService.csproj
@@ -90,6 +90,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Channel.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Router.cs" />
