Created chat, next up is commands.

--- a/BAChatService/BAChatService.csproj
+++ b/BAChatService/BAChatService.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Channel.cs" />
+    <Compile Include="Chat.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Login.cs" />
